kubernetes/apps/hydra/wedding-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding-website
spec:
  selector:
    matchLabels:
      app: wedding-website
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wedding-website
    spec:
      securityContext:
        fsGroup: 65532
      imagePullSecrets:
      - name: ghcr-pull
      containers:
      - name: wedding-website
        image: ghcr.io/thetillhoff/wedding-website:26 # {"$imagepolicy": "wedding-website:wedding-website"}
        ports:
        - containerPort: 80
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          runAsUser: 65532
          seccompProfile:
            type: RuntimeDefault
        livenessProbe:
          httpGet:
            port: 80
            path: /healthz
          initialDelaySeconds: 5
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: wedding-website-data
