kubernetes/apps/hydra/wedding-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-website
spec:
  ports:
  - port: 80
    targetPort: 80

  selector:
    app: wedding-website
