kubernetes/apps/hydra/wedding-website/httpRoute-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wedding-website-http
spec:
  parentRefs:
  - name: http-gateway
    namespace: gateways
  hostnames:
  - wedding.thetillhoff.de
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
