kubernetes/apps/hydra/wedding-website/httpRoute-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wedding-website-https
spec:
  parentRefs:
  - name: https-gateway-thetillhoff-de
    namespace: gateways
  hostnames:
  - wedding.thetillhoff.de
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: wedding-website
      port: 80
